[project]
name = "mcp_cve"
version = "0.1.0"
description = "An MCP enabled CVE database searcher"
authors = [
  { name = "David Poole" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx", "mcp", "requests"]

[project.scripts]
mcp_cve = "mcp_cve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mcp_cve.py"]
